@@ -227,20 +227,21 @@ RcppExport SEXP _qlcal_isEndOfMonth(SEXP datesSEXP, SEXP xpSEXP) {
     return rcpp_result_gen;
 }
 // getEndOfMonth
-Rcpp::DateVector getEndOfMonth(Rcpp::DateVector dates);
-static SEXP _qlcal_getEndOfMonth_try(SEXP datesSEXP) {
+Rcpp::DateVector getEndOfMonth(Rcpp::DateVector dates, Rcpp::Nullable<Rcpp::XPtr<QlCal::CalendarContainer>> xp);
+static SEXP _qlcal_getEndOfMonth_try(SEXP datesSEXP, SEXP xpSEXP) {
 BEGIN_RCPP
     Rcpp::RObject rcpp_result_gen;
     Rcpp::traits::input_parameter< Rcpp::DateVector >::type dates(datesSEXP);
-    rcpp_result_gen = Rcpp::wrap(getEndOfMonth(dates));
+    Rcpp::traits::input_parameter< Rcpp::Nullable<Rcpp::XPtr<QlCal::CalendarContainer>> >::type xp(xpSEXP);
+    rcpp_result_gen = Rcpp::wrap(getEndOfMonth(dates, xp));
     return rcpp_result_gen;
 END_RCPP_RETURN_ERROR
 }
-RcppExport SEXP _qlcal_getEndOfMonth(SEXP datesSEXP) {
+RcppExport SEXP _qlcal_getEndOfMonth(SEXP datesSEXP, SEXP xpSEXP) {
     SEXP rcpp_result_gen;
     {
         Rcpp::RNGScope rcpp_rngScope_gen;
-        rcpp_result_gen = PROTECT(_qlcal_getEndOfMonth_try(datesSEXP));
+        rcpp_result_gen = PROTECT(_qlcal_getEndOfMonth_try(datesSEXP, xpSEXP));
     }
     Rboolean rcpp_isInterrupt_gen = Rf_inherits(rcpp_result_gen, "interrupted-error");
     if (rcpp_isInterrupt_gen) {
@@ -554,7 +555,7 @@ static int _qlcal_RcppExport_validate(const char* sig) {
         signatures.insert("Rcpp::LogicalVector(*isHoliday)(Rcpp::Nullable<Rcpp::DateVector>,Rcpp::Nullable<Rcpp::XPtr<QlCal::CalendarContainer>>)");
         signatures.insert("Rcpp::LogicalVector(*isWeekend)(Rcpp::Nullable<Rcpp::DateVector>,Rcpp::Nullable<Rcpp::XPtr<QlCal::CalendarContainer>>)");
         signatures.insert("Rcpp::LogicalVector(*isEndOfMonth)(Rcpp::Nullable<Rcpp::DateVector>,Rcpp::Nullable<Rcpp::XPtr<QlCal::CalendarContainer>>)");
-        signatures.insert("Rcpp::DateVector(*getEndOfMonth)(Rcpp::DateVector)");
+        signatures.insert("Rcpp::DateVector(*getEndOfMonth)(Rcpp::DateVector,Rcpp::Nullable<Rcpp::XPtr<QlCal::CalendarContainer>>)");
         signatures.insert("Rcpp::DateVector(*adjust_cpp)(Rcpp::DateVector,int)");
         signatures.insert("Rcpp::DateVector(*advanceUnits_cpp)(Rcpp::DateVector,int,int,int,bool)");
         signatures.insert("Rcpp::NumericVector(*businessDaysBetween)(Rcpp::DateVector,Rcpp::DateVector,bool,bool)");
@@ -595,7 +596,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"_qlcal_isHoliday", (DL_FUNC) &_qlcal_isHoliday, 2},
     {"_qlcal_isWeekend", (DL_FUNC) &_qlcal_isWeekend, 2},
     {"_qlcal_isEndOfMonth", (DL_FUNC) &_qlcal_isEndOfMonth, 2},
-    {"_qlcal_getEndOfMonth", (DL_FUNC) &_qlcal_getEndOfMonth, 1},
+    {"_qlcal_getEndOfMonth", (DL_FUNC) &_qlcal_getEndOfMonth, 2},
     {"_qlcal_adjust_cpp", (DL_FUNC) &_qlcal_adjust_cpp, 2},
     {"_qlcal_advanceUnits_cpp", (DL_FUNC) &_qlcal_advanceUnits_cpp, 5},
     {"_qlcal_businessDaysBetween", (DL_FUNC) &_qlcal_businessDaysBetween, 4},
